page loading done

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 GOOGLE_ID=""
 GOOGLE_SECRET=""
-FAUNADB_SECRET=""
+FAUNADB_SECRET="fnAEst8T8hAARcm5tUlPHerXF7NACgGGMCmnpxYZ"
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 
