--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "canvas-confetti": "^1.5.1",
     "daisyui": "^2.20.0",
     "next": "12.2.3",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "typescript": "4.7.4"
